# fish-manpage-completions

./: Cargo.toml
fixtures/: aaxine.1  apper.1  aria2c.1  docker-rmi.1.unicode  qelectrotech.1  test.1
src/: deroff.rs  main.rs  util.rs
