[package]
name = "fish-manpage-completions"
version = "0.1.0"
authors = ["Scott Steele <scottlsteele@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "*"
itertools = "*"
regex = "*"
lazy_static = "*"
bstr = "*"
flate2 = "1.0"
bzip2 = "0.3"
xz2 = "0.1"
encoding_rs_io = "0.1.7"

[dev-dependencies]
pretty_assertions = "*"
